Bug 360640 - Ark's new extract-to dialog silently ignores a directory path entered in the name field
Summary: Ark's new extract-to dialog silently ignores a directory path entered in the ...
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 15.12.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Ragnar Thomsen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-17 01:39 UTC by Eevee
Modified: 2016-03-18 22:21 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.04.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eevee 2016-03-17 01:39:04 UTC
The new extract-to dialog has several parts in the middle column, including: the location of the current directory, the contents of that directory, and a filename to extract to.

The default directory is my desktop.

I type a directory path in the filename field, and it even helps me do so, with tab completion and a list of suggestions.  Nice.

Then I press Enter, and the files are immediately extracted to...  my desktop.

This is the exact opposite behavior of every other file browse dialog on the planet, which would usually notice that I typed a directory path and browse to that directory.  Instead, Ark seems to think my Enter keypress was to activate the Extract button, and ignores the path I typed entirely.

I can type the path in the location field at the top, press Enter, and all works fine.  But I sure do have some strong muscle memory for this.  :)

I'm fairly certain this started after I upgraded to Plasma 5 (and with it, the Ark 15.x series).

Reproducible: Always
Comment 1 Ragnar Thomsen 2016-03-17 08:33:36 UTC
Confirming. I'll take a look at this.
Comment 2 Elvis Angelaccio 2016-03-17 11:05:07 UTC
The same bug affects the CreateDialog as well.
Comment 3 Ragnar Thomsen 2016-03-18 22:21:32 UTC
Git commit aaf5fce08b1318ba685d2245a822eaf8f4a97377 by Ragnar Thomsen.
Committed on 18/03/2016 at 22:17.
Pushed by rthomsen into branch 'master'.

Improve ExtractionDialog

This enables typing an existing subfolder's name in the location bar and
pressing Return/Enter. Previously when this was attempted, Ark would
ignore what the user typed and extract to baseUrl(). This behavior
deviated from a QFileDialog (which we use for Open Dialog), which simply
enters the existing subfolder.
FIXED-IN: 16.04.0

Differential Revision: D1165

M  +52   -28   kerfuffle/extractiondialog.cpp
M  +1    -1    kerfuffle/extractiondialog.h

http://commits.kde.org/ark/aaf5fce08b1318ba685d2245a822eaf8f4a97377